--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body  {
+  background: url("https://images.wallpaperscraft.ru/image/luna_derevia_holmy_206292_1600x900.jpg");
+}
+
 .app-wrapper {
   margin: 0 auto;
   display: grid;
@@ -9,31 +13,5 @@
 
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  /*grid-gap: 0;*/
-}
-
-.header {
-  grid-area: h;
-  background-color: green;
-}
-
-.header a {
-  color: lightgrey;
-}
-
-.header img {
-  width: 20px;
-}
-.yoda {
-  width: 70%;
-}
-
-.nav {
-  grid-area: n;
-  background-color: burlywood;
-}
-
-.content {
-  grid-area: c;
-  background-color: cornflowerblue;
+  grid-gap: 1%;
 }
