--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body  {
-  background: url("https://images.wallpaperscraft.ru/image/most_skaly_bereg_212419_2560x1600.jpg");
+  /*background: url("https://images.wallpaperscraft.ru/image/most_skaly_bereg_212419_2560x1600.jpg");*/
+  background-color: #b7d4e8;
 }
 
 .app-wrapper {
