--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,16 +1,7 @@
-.content {
-    grid-area: c;
-    background-color: lightgrey;
+.postsBlock {
+    padding: 10px;
 }
 
-.background img {
-    width: 100%;
-}
-
-.windowEnter {
-    padding: 6px;
-}
-
-.item__mrbin img {
-    width: 10%;
+.posts {
+    margin-top: 10px;
 }
