--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,34 @@
-body  {
-  /*background: url("https://images.wallpaperscraft.ru/image/most_skaly_bereg_212419_2560x1600.jpg");*/
-  background-color: #b7d4e8;
-}
-
 .app-wrapper {
-  margin: 0 auto;
-  display: grid;
-  width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    width: 1200px;
+    grid-template-areas: "h h" "n c";
 
-  grid-template-areas:
-  "h h"
-  "n c";
-
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 1%;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    /* grid-gap: 10px; */
 }
+
+.app-wrapper-content {
+    grid-area: c;
+    background-color: cornflowerblue;
+}
+
+
+
+
+
+
+
+
+
+
+/*
+
+/messages
+/dialogs
+
+/dialogs/3
+/dialogs/2
+
+*/
