--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,21 +1,9 @@
-.content {
-    border-style: solid;
-    border-width: 2px;
-    margin: 5px;
-}
-
 .item {
-    margin: 10px;
+  color: greenyellow;
 }
 
 .item img {
-    width: 50px;
-    height: 50px;
-    border-radius: 30px;
-    margin: 10px 0 0 0;
-}
-
-.yoda {
-    width: 14px;
-    border-radius: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 30px;
 }
